Final preparation for PyPI release v0.1.1
- Add Collin Liu's email to pyproject.toml authors
- Sync author information across all configuration files
- Verify package builds successfully and passes all checks
- Test local installation confirms functionality
- Ready for PyPI upload

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 license = "MIT"
 authors = [
     {name = "Bryce Wang", email = "brycew6m@stanford.edu"},
-    {name = "Collin Liu"}
+    {name = "Collin Liu", email = "junnebailiu@gmail.com"}
 ]
 maintainers = [
     {name = "Bryce Wang", email = "brycew6m@stanford.edu"}
